<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jerae</groupId>
    <artifactId>jsecurity</artifactId>
    <version>0.1.0</version>
    <packaging>jar</packaging>

    <name>jsecurity</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>1.21</id>
            <properties>
                <minecraft.version>1.21-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
        <profile>
            <id>1.21.1</id>
            <properties>
                <minecraft.version>1.21.1-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
        <profile>
            <id>1.21.2</id>
            <properties>
                <minecraft.version>1.21.2-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
        <profile>
            <id>1.21.3</id>
            <properties>
                <minecraft.version>1.21.3-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
        <profile>
            <id>1.21.4</id>
            <properties>
                <minecraft.version>1.21.4-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
        <profile>
            <id>1.21.5</id>
            <properties>
                <minecraft.version>1.21.5-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
        <profile>
            <id>1.21.6</id>
            <properties>
                <minecraft.version>1.21.6-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
        <profile>
            <id>1.21.7</id>
            <properties>
                <minecraft.version>1.21.7-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
        <profile>
            <id>1.21.8</id>
            <properties>
                <minecraft.version>1.21.8-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
        <profile>
            <id>1.21.9</id>
            <properties>
                <minecraft.version>1.21.9-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
        <profile>
            <id>1.21.10</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <minecraft.version>1.21.10-R0.1-SNAPSHOT</minecraft.version>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${minecraft.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockbukkit.mockbukkit</groupId>
            <artifactId>mockbukkit-v1.21</artifactId>
            <version>4.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
